--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,71 +2,51 @@
 @tailwind components;
 @tailwind utilities;
 @layer base {
-  :root {
-    --background: 240 6% 10%;
-    --foreground: 60 0% 90%;
+:root {
+  --background: 0 0% 100%;
+  --foreground: 240 10% 3.9%;
+  --card: 0 0% 100%;
+  --card-foreground: 240 10% 3.9%;
+  --popover: 0 0% 100%;
+  --popover-foreground: 240 10% 3.9%;
+  /* PRIMARY = #0B57D0 */
+  --primary: 216.85 89.95% 42.94%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 240 4.76% 95.88%;
+  --secondary-foreground: 240 5.3% 26%;
+  --muted: 240 4.76% 95.88%;
+  --muted-foreground: 220 8.94% 46.08%;
+  --accent: 240 4.76% 95.88%;
+  --accent-foreground: 240 10% 3.9%;
+  --destructive: 0 72.22% 50.59%;
+  --destructive-foreground: 0 0% 100%;
+  --border: 240 5.9% 90%;
+  --input: 240 5.9% 90%;
+  --ring: 217.22 91.22% 59.8%;
+  --radius: 0.8rem;
+}
+.dark {
+  --background: 240 10% 3.9%;
+  --foreground: 0 0% 98%;
+  --card: 240 10% 3.9%;
+  --card-foreground: 0 0% 98%;
+  --popover: 240 10% 3.9%;
+  --popover-foreground: 0 0% 98%;
+  --primary: 216.85 89.95% 55%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 240 3.7% 15%;
+  --secondary-foreground: 0 0% 98%;
+  --muted: 240 3.7% 15%;
+  --muted-foreground: 240 5% 64%;
+  --accent: 240 3.7% 15%;
+  --accent-foreground: 0 0% 98%;
+  --destructive: 0 62.8% 40%;
+  --destructive-foreground: 0 0% 98%;
+  --border: 240 3.7% 15%;
+  --input: 240 3.7% 15%;
+  --ring: 216.85 89.95% 60%;
+}
 
-    --muted: 240 6% 10%;
-    --muted-foreground: 240 5% 84%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 47.4% 11.2%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 47.4% 11.2%;
-
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 100% 50%;
-    --destructive-foreground: 210 40% 98%;
-
-    --ring: 215 20.2% 65.1%;
-
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 224 71% 4%;
-    --foreground: 213 31% 91%;
-
-    --muted: 223 47% 11%;
-    --muted-foreground: 215.4 16.3% 56.9%;
-
-    --accent: 216 34% 17%;
-    --accent-foreground: 210 40% 98%;
-
-    --popover: 224 71% 4%;
-    --popover-foreground: 215 20.2% 65.1%;
-
-    --border: 216 34% 17%;
-    --input: 216 34% 17%;
-
-    --card: 224 71% 4%;
-    --card-foreground: 213 31% 91%;
-
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 1.2%;
-
-    --secondary: 222.2 47.4% 11.2%;
-    --secondary-foreground: 210 40% 98%;
-
-    --destructive: 0 63% 31%;
-    --destructive-foreground: 210 40% 98%;
-
-    --ring: 216 34% 17%;
-
-    --radius: 0.5rem;
-  }
   ::selection {
     @apply text-black;
     @apply bg-cyan-400;
